# agent-sandbox

./: .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  SPEC.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: agent-sandbox.yml
examples/advanced-analysis/: .agent-sandbox.yml
examples/changelog/: .agent-sandbox.yml
examples/lint-fix/: .agent-sandbox.yml
src/: __init__.py  __main__.py  agent.py  cli.py  logging_config.py  manifest.py  pr_creator.py  sandbox.py  summarizer.py
tests/: conftest.py  test_agent.py  test_fetch_action.py  test_integration.py  test_manifest.py  test_new_features.py  test_sandbox.py
